Improve services and controllers
